--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@tailwindcss/vite": "^4.1.14",
+    "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^12.23.22",
     "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.14"
+    "react-fast-marquee": "^1.6.5",
+    "react-tsparticles": "^2.12.2",
+    "swiper": "^12.0.2",
+    "tailwindcss": "^4.1.14",
+    "three": "^0.180.0",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
